# qt5-external-resources-cmake

./: LICENSE  README
examples/hello-world/: CMakeLists.txt  helloworld.cc  resources-small.qrc  resources.qrc
